base/services/ms-identity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-identity
  labels:
    app: ms-identity
    app.kubernetes.io/name: ms-identity
spec:
  type: ClusterIP
  ports:
    - port: 3006
      targetPort: 3006
      protocol: TCP
      name: http
  selector:
    app: ms-identity
